# jog

./: .gitignore  .readthedocs.yaml  CHANGELOG.rst  LICENSE  README.md  README.rst  jog.py  pyproject.toml  requirements.txt  setup.cfg
docs/: conf.py  index.rst
docs/ref/: exceptions.rst  output.rst  tasks.rst
docs/topics/: builtins.rst  class_tasks.rst  config.rst  func_tasks.rst  helpers.rst  intro.rst  output.rst  string_tasks.rst
jog_cmd/: main.py
jog_cmd/commands/: base.py  lint.py  test.py
jogger/: jog.py  main.py  output.py
jogger/commands/: base.py
jogger/tasks/: __init__.py  _release.py  base.py  docs.py  lint.py  test.py  update.py
jogger/utils/: files.py  input.py  output.py
